Fixed wrapping issues with chat message archive table.

--- a/css/global.css
+++ b/css/global.css
@@ -728,6 +728,9 @@ input[id^="FinalizeButton"]{
 	margin-top: 10px;
 	width: auto !important;
 }
+.archive-messages-table{
+	table-layout: fixed;
+}
 @media only screen and (max-width: 500px){
 	#logo{
 		position: relative;
